home-page/vk - Slider alignment and fixes

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -16,7 +16,7 @@ i.icon {
   background: #E64040 !important;
 }
 .swiper-pagination-bullet {
-  background: #fff;
+  background: #fdfd7c;
 }
 .swiper-pagination-bullet {
   opacity: 1;
